<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_l"
    tools:context=".Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_bg"
        android:clickable="false"
        android:alpha=".90"/>

    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="168dp"
        android:layout_height="142dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/inksight_dark_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/halfbox"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoimg"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/sclabel_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/screenlabel_r"
            android:textAlignment="inherit"
            android:textColor="@color/SurfTheWeb"
            android:textSize="30sp" />
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/usrname_inp_label"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_inp_label"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/passw_inp_label"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/conf_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/passw_conf_inp_label"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbutton_nst"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_button_label"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/resetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Terms_Agreement"
            android:textColor="@color/SurfTheWeb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_label"
            android:textAlignment="center"
            android:textColor="@color/SurfTheWeb" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/roundedbutton_wst"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login_button_label"
            android:textColor="@color/StrawberryField" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>