<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_l"
    tools:context=".Settings">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".90"
        android:clickable="false"
        android:src="@drawable/gradient_bg" />

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backbttn"
            android:contentDescription="@string/buttonlabel_bk"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/_14" />

        <TextView
            android:id="@+id/screenlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:background="@drawable/labelbackgrounds"
            android:fontFamily="@font/poppins"
            android:textSize="25sp"
            android:textColor="@color/SurfTheWeb"
            android:text="@string/screenlabel_st"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/homebttn"
            android:contentDescription="@string/buttonlabel_ho"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/home_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resetpasssection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/roundedboxbg"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="35dp"
            android:paddingEnd="10dp"
            android:text="@string/changepass"
            android:textColor="@color/SalmonUpstream"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/uname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/passlabelold"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/passlabelnew"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newpassbttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbutton_nst"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/confirmbutton"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutbttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton_nst"
        android:drawableStart="@drawable/sign_out_logo"
        android:drawableTint="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="3dp"
        android:paddingBottom="1dp"
        android:text="@string/logoutbutton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

</androidx.constraintlayout.widget.ConstraintLayout>