<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_l"
    tools:context=".ResetPass">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".90"
        android:clickable="false"
        android:src="@drawable/gradient_bg" />

    <LinearLayout
        android:id="@+id/interactibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedboxbg"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <TextView
            android:id="@+id/sclabel_rp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/screenlabel_rp"
            android:textAlignment="inherit"
            android:textColor="@color/SurfTheWeb"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/uname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/usrname_inp_label"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/labelbackgrounds"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_inp_label"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbutton_nst"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/proceed_button_label"
            android:textColor="@color/white" />
    </LinearLayout>
    <ImageView
        android:id="@+id/lockimg"
        android:layout_width="188dp"
        android:layout_height="158dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/lock_icon"
        app:layout_constraintBottom_toBottomOf="@id/overlapview"
        app:layout_constraintEnd_toEndOf="@id/overlapview"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/overlapview"
        app:layout_constraintTop_toTopOf="@id/overlapview"
        app:layout_constraintVertical_bias="0.75"/>

    <Space
        android:id="@+id/overlapview"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/interactibles"
        app:layout_constraintEnd_toEndOf="@id/interactibles"
        app:layout_constraintStart_toStartOf="@id/interactibles"
        app:layout_constraintTop_toTopOf="@id/interactibles"
        app:layout_constraintVertical_bias="0"
    />

</androidx.constraintlayout.widget.ConstraintLayout>