<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_l"
    tools:context=".Archives">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".90"
        android:clickable="false"
        android:src="@drawable/gradient_bg" />

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"

            app:srcCompat="@drawable/logo_ink_sight_1" />

        <ImageView
            android:id="@+id/logotxt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:src="@drawable/ink_sight_letter_1" />

        <ImageButton
            android:id="@+id/homebttn"
            android:contentDescription="@string/buttonlabel_ho"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/home_1" />

        <ImageButton
            android:id="@+id/settingsbttn"
            android:contentDescription="@string/buttonlabel_st"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/setting_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labelandrecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/screenlbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/labelbackgrounds"
            android:fontFamily="@font/poppins"
            android:textSize="25dp"
            android:textColor="@color/SurfTheWeb"
            android:text="@string/screenlabel_ar"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/archives_prev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/friendsbttn"
                android:contentDescription="@string/buttonlabel_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/_11" />

            <ImageButton
                android:id="@+id/addslambttn"
                android:contentDescription="@string/buttonlabel_as"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/_9" />

            <ImageButton
                android:id="@+id/archivesbttn"
                android:contentDescription="@string/buttonlabel_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/_10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttontext"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/halfbox_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonlabel_fr"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonlabel_as"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                android:text="@string/buttonlabel_ar" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>